# mce-tasks-djq

./: .coveralls.yml  .travis.yml  README.md  setup.cfg  setup.py
mce_tasks_djq/: __init__.py  apps.py  azure.py
project_test/: settings.py  urls.py
tests/: conftest.py
tests/app_test/: settings.py
tests/azure/: conftest.py  test_sync_resource.py  test_sync_resource_group.py  test_sync_resource_type.py
