[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.app_test.settings
testpaths = tests
addopts = --cov=mce_tasks_djq --cov-branch --create-db

[coverage:run]
source = mce_tasks_djq

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

